--- a/src/main/resources/org/example/demo/CardViewFournisseur.fxml
+++ b/src/main/resources/org/example/demo/CardViewFournisseur.fxml
@@ -3,17 +3,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.image.ImageView?>
-
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
-<AnchorPane xmlns="http://javafx.com/javafx/11.0.1"
+
+<AnchorPane xmlns="http://javafx.com/javafx/17.0.6"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controllers.CardViewFournisseurController"
-            style="-fx-background-color: white; -fx-border-radius: 10;"
+            style="-fx-background-color: white; -fx-border-radius: 10; -fx-padding: 10;"
             prefWidth="250" prefHeight="250">
 
-    <ImageView fx:id="imageView" fitWidth="200" fitHeight="150" preserveRatio="true"
-               layoutX="25" layoutY="10"/>
+    <ImageView fx:id="imageView" fitWidth="200" fitHeight="150" preserveRatio="true" layoutX="25" layoutY="10"/>
 
     <Label fx:id="nomLabel" layoutY="170" style="-fx-font-size: 16; -fx-font-weight: bold;" />
     <Label fx:id="numLabel" layoutY="195" style="-fx-font-size: 14; -fx-text-fill: gray;" />
