--- a/src/main/resources/org/example/demo/CardView.fxml
+++ b/src/main/resources/org/example/demo/CardView.fxml
@@ -1,60 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
-
 <?import com.jfoenix.controls.JFXButton?>
-<AnchorPane xmlns="http://javafx.com/javafx/11.0.1"
+
+<?import javafx.geometry.Insets?>
+<AnchorPane xmlns="http://javafx.com/javafx/17.0.6"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controllers.CardViewController"
-            prefWidth="250"
-            prefHeight="320"
-            style="-fx-background-color: white; -fx-border-radius: 10; -fx-padding: 10;">
+            style="-fx-background-color: white; -fx-border-radius: 10; -fx-padding: 10;"
+            prefWidth="250" prefHeight="150">
 
-    <ImageView fx:id="imageView"
-               fitWidth="200"
-               fitHeight="150"
-               preserveRatio="true"
-               layoutX="25"
-               layoutY="10"/>
+    <!-- Image + Infos principales -->
+    <VBox spacing="5" alignment="CENTER_LEFT">
+        <ImageView fx:id="imageView" fitWidth="200" fitHeight="100" preserveRatio="true"/>
 
-    <Label fx:id="nomLabel"
-           layoutY="170"
-           style="-fx-font-size: 16; -fx-font-weight: bold;"
-           layoutX="10"/>
+        <Label fx:id="nomLabel" style="-fx-font-weight: bold;" />
+        <Label fx:id="typeLabel" style="-fx-text-fill: gray;" />
+    </VBox>
 
-    <Label fx:id="typeLabel"
-           layoutY="195"
-           style="-fx-font-size: 14; -fx-text-fill: gray;"
-           layoutX="10"/>
-
-    <JFXButton fx:id="detailsButton"
-               text="Détails"
-               layoutY="220"
-               style="-fx-background-color: #002366; -fx-text-fill: white;"
-               onAction="#showDetails"
-               layoutX="10"
-               prefWidth="230"/>
-
-    <VBox fx:id="detailsContainer"
-          visible="false"
-          layoutY="250"
-          spacing="8"
-          style="-fx-padding: 10;"
-          layoutX="10"
-          prefWidth="230"
-          maxHeight="150">
-
-        <Label text="Quantité Totale : "/><Label fx:id="qteTotLabel"/>
-        <Label text="Quantité Disponible : "/><Label fx:id="qteDispLabel"/>
-        <Label text="ID Lieu : "/><Label fx:id="idLieuLabel"/>
-        <Label text="ID Fournisseur : "/><Label fx:id="idFournLabel"/>
+    <!-- Conteneur des détails (caché par défaut) -->
+    <VBox fx:id="detailsContainer" visible="false" managed="false" spacing="5" layoutY="120" minWidth="200">
+        <padding><Insets top="10"/></padding>
+        <Label fx:id="qteTotLabel"/>
+        <Label fx:id="qteDispLabel"/>
+        <Label fx:id="idLieuLabel"/>
+        <Label fx:id="idFournLabel"/>
 
         <HBox spacing="10">
-            <JFXButton text="Modifier" styleClass="card-modifier-button" onAction="#modifier"/>
-            <JFXButton text="Supprimer" styleClass="card-supprimer-button" onAction="#supprimer"/>
+            <JFXButton text="Modifier" onAction="#modifier" style="-fx-background-color: #f39c12; -fx-text-fill: white;" />
+            <JFXButton text="Supprimer" onAction="#supprimer" style="-fx-background-color: #e74c3c; -fx-text-fill: white;" />
         </HBox>
     </VBox>
 
+    <!-- Bouton Détails -->
+    <JFXButton fx:id="detailsButton"
+               text="Détails"
+               layoutX="150"
+               layoutY="100"
+               style="-fx-background-color: #002366; -fx-text-fill: white;"
+               onAction="#showDetails"/>
 </AnchorPane>
